fix: other overflow, subscr paralax

--- a/css/style.css
+++ b/css/style.css
@@ -1262,13 +1262,24 @@ div[id$='-error'] {
 }
 
 .subscribe {
-  position: relative;
   padding: 98px 0 87px;
-  background: transparent;
-  min-height: 260px;
 }
 
-.subscribe::before {
+.subscribe__wrap {
+  position: relative;
+  background: transparent;
+  min-height: 260px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.subscribe__wrap::before {
   content: "";
   position: absolute;
   top: 0;
@@ -1279,7 +1290,7 @@ div[id$='-error'] {
 }
 
 .subscribe__container {
-  max-width: 731px;
+  width: 731px;
   margin: 0 auto;
   display: -webkit-box;
   display: -webkit-flex;
@@ -1298,7 +1309,7 @@ div[id$='-error'] {
 .subscribe__text {
   position: relative;
   color: #ffffff;
-  max-width: 242px;
+  max-width: 245px;
 }
 
 .subscribe__subtitle {
@@ -1553,7 +1564,8 @@ div[id$='-error'] {
 .other__grid {
   display: grid;
   grid-template-columns: repeat(3, 350px);
-  grid-template-rows: repeat(2, 500px);
+  grid-template-rows: repeat(2, minmax(500px, -webkit-max-content));
+  grid-template-rows: repeat(2, minmax(500px, max-content));
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
