--- a/sass/blocks/_other.sass
+++ b/sass/blocks/_other.sass
@@ -33,7 +33,7 @@
 		display: grid
 	  // grid-template-areas: "other-big other-item" "other-item other-item other-item" 
 		grid-template-columns: repeat(3, 350px)
-		grid-template-rows: repeat(2, 500px)
+		grid-template-rows: repeat(2, minmax(500px,max-content))
 		justify-content: space-between
 		row-gap: 30px
 		// column-gap: 30px
