--- a/sass/blocks/_subscribe.sass
+++ b/sass/blocks/_subscribe.sass
@@ -1,26 +1,30 @@
-.subscribe 
-	position: relative
+.subscribe
 	padding: 98px 0 87px
-	background: transparent
-	min-height: 260px
-	// background: url('../img/bg-subscribe.jpg') no-repeat center/cover
-	// background-attachment: fixed
 	@media screen and ( max-width: 767px)
 		padding: 92px 34px 93px
 	@media screen and ( max-width: 576px)
 		padding: 76px 20px 83px
-	&::before
-		content: ""
-		position: absolute
-		top: 0
-		left: 0
-		height: 100%
-		width: 100%
-		background: rgba(10, 34, 61, 0.8)
-		// z-index: 20
+	&__wrap
+		position: relative
+		background: transparent
+		min-height: 260px
+		display: flex
+		justify-content: space-between
+		// align-items: center
+		// background: url('../img/bg-subscribe.jpg') no-repeat center/cover
+		// background-attachment: fixed
+		&::before
+			content: ""
+			position: absolute
+			top: 0
+			left: 0
+			height: 100%
+			width: 100%
+			background: rgba(10, 34, 61, 0.8)
+			// z-index: 20
 
 	&__container 
-		max-width: 731px
+		width: 731px
 		margin: 0 auto
 		display: flex
 		justify-content: space-between
@@ -35,7 +39,7 @@
 	&__text
 		position: relative
 		color: $light
-		max-width: 242px
+		max-width: 245px
 		@media screen and ( max-width: 670px)
 			margin: 0 0 37px 0
 		// z-index: 10
